Fix link z-index

--- a/Alexandria Viewer/src/style.css
+++ b/Alexandria Viewer/src/style.css
@@ -14,13 +14,13 @@
 
 #alexandria-pdf-container .linkAnnotation {
     opacity: 0;
-    z-index: 2;
+    z-index: 5;
 }
 
 #alexandria-pdf-container .figureAnnotation {
     opacity: 0;
     position: absolute;
-    z-index: 2;
+    z-index: 5;
     cursor: pointer;
     pointer-events: auto;
 }
